--- a/src/js/views/trips/index.html
+++ b/src/js/views/trips/index.html
@@ -5,16 +5,16 @@
   </div>
 
   <div ng-repeat="post in tripsIndex.filteredStops | orderBy : '-get_balanced_votes'" class="tripsIndexPosts">
-      <h3>
-        <span>{{post.get_balanced_votes}}</span>
-        <a ui-sref="postsShow({ id: post.id })" >
+      <h3><span>{{post.get_balanced_votes}}</span>
+        <a ui-sref="postsShow({ id: post.id })">
           {{ post.title }}
-        </a> -
+        </a>
+      </h3>
+      <p class="postShowBody">{{ post.body }}</p>
+      <p>
         <a ui-sref="usersShow({ id: post.user.id })">
           <strong>{{ post.user.username }}</strong>
         </a>
-        <em>{{ post.created_at | date }}</em>
-      </h3>
-      <p class="postShowBody">{{ post.body }}</p>
+        <em>{{ post.created_at | date }}</em></p>
   </div>
 </div>
