--- a/src/js/views/auth/login.html
+++ b/src/js/views/auth/login.html
@@ -1,10 +1,9 @@
 <div class="container">
 
   <form name="login.loginForm" ng-submit="login.login()" class="form-group authForm" novalidate>
-    <h3>Login</h3>
+
     <div>
-      <label>Email</label>
-      <input type="text" name="email" id="email" class="form-control" ng-model="login.credentials.email" required>
+      <input type="text" name="email" id="email" class="form-control" ng-model="login.credentials.email" placeholder="Email" required>
     </div>
 
     <div class="ng-message-error" ng-messages="login.loginForm.email.$error" ng-show="(login.loginForm.$submitted || login.loginForm.email.$touched)">
@@ -12,14 +11,16 @@
     </div>
 
     <div>
-      <label>Password</label>
-      <input type="password" name="password" id="password" class="form-control" ng-model="login.credentials.password" required>
+      <input type="password" name="password" id="password" class="form-control" ng-model="login.credentials.password" placeholder="Password" required>
     </div>
+
     <div class="ng-message-error errors" ng-messages="login.loginForm.password.$error" ng-show="(login.loginForm.$submitted || login.loginForm.password.$touched)">
       <p ng-message="required">Your password is required.</p>
     </div>
+
     <div class="authButton">
       <button class="button">Login</button>
     </div>
+
   </form>
 </div>
