--- a/src/js/views/auth/register.html
+++ b/src/js/views/auth/register.html
@@ -2,17 +2,15 @@
 
   <div>
     <form name="register.registerForm" ng-submit="register.register()" class="form-group authForm" novalidate>
-      <h3>Register</h3>
+      <h3>Sign Up</h3>
       <div>
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username" class="form-control" ng-model="register.user.username" required>
+        <input type="text" name="username" id="username" class="form-control" ng-model="register.user.username" placeholder="Username" required>
       </div>
       <div class="ng-message-error" ng-messages="register.registerForm.username.$error" ng-show="(register.registerForm.$submitted || register.registerForm.username.$touched)">
         <p ng-message="required">Your username is required.</p>
       </div>
       <div>
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" class="form-control" ng-model="register.user.email" required>
+        <input type="email" name="email" id="email" class="form-control" ng-model="register.user.email" placeholder="Email" required>
       </div>
       <div class="ng-message-error" ng-messages="register.registerForm.email.$error" ng-show="(register.registerForm.$submitted || register.registerForm.email.$touched)">
         <p ng-message="required">Your email is required.</p>
@@ -20,32 +18,28 @@
       </div>
 
       <div>
-        <label for="first_name">First Name</label>
-        <input type="text" name="first_name" id="first_name" class="form-control" ng-model="register.user.first_name" required>
+        <input type="text" name="first_name" id="first_name" class="form-control" ng-model="register.user.first_name" placeholder="First Name" required>
       </div>
       <div class="ng-message-error" ng-messages="register.registerForm.first_name.$error" ng-show="(register.registerForm.$submitted || register.registerForm.first_name.$touched)">
         <p ng-message="required">Your first name is required.</p>
       </div>
 
       <div>
-        <label for="last_name">Last Name</label>
-        <input type="text" name="last_name" id="last_name" class="form-control" ng-model="register.user.last_name" required>
+        <input type="text" name="last_name" id="last_name" class="form-control" ng-model="register.user.last_name" placeholder="Last Name" required>
       </div>
       <div class="ng-message-error" ng-messages="register.registerForm.last_name.$error" ng-show="(register.registerForm.$submitted || register.registerForm.last_name.$touched)">
         <p ng-message="required">Your last name is required.</p>
       </div>
 
       <div>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" class="form-control" ng-model="register.user.password" required>
+        <input type="password" name="password" id="password" class="form-control" ng-model="register.user.password" placeholder="Password" required>
       </div>
       <div class="ng-message-error" ng-messages="register.registerForm.password.$error" ng-show="(register.registerForm.$submitted || register.registerForm.password.$touched)">
         <p ng-message="required">Your password is required.</p>
       </div>
 
       <div>
-        <label for="password_confirmation">Password Confirmation</label>
-        <input type="password" name="password_confirmation" id="password_confirmation" class="form-control" ng-model="register.user.password_confirmation" required>
+        <input type="password" name="password_confirmation" id="password_confirmation" class="form-control" ng-model="register.user.password_confirmation" placeholder="Please retype your password" required>
       </div>
 
       <div class="ng-message-error" ng-messages="register.registerForm.password_confirmation.$error" ng-show="(register.registerForm.$submitted || register.registerForm.password_confirmation.$touched)">
@@ -53,11 +47,10 @@
       </div>
 
       <div class="form-group">
-        <label for="base64">Image</label>
         <input type="file" base64 name="base64" id="base64" ng-model="register.user.base64" class="form-control">
       </div>
       <div class="authButton">
-        <button class="button">Register</button>
+        <button class="button">Sign Up</button>
       </div>
     </form>
   </div>
