--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,11 +33,17 @@ img {
 form {
   background-color: $earthGreen;
   color: $deepOcean;
+  h3 {
+    padding-bottom: 20px;
+  }
   button {
     border-radius: 10px;
     padding: 10px;
     border: solid 1px #fff;
     background: #fff;
+    &:focus {
+      border: none;
+    }
     &:hover {
       border: solid 1px $deepOcean;
       background-color: $deepOcean;
