--- a/src/js/views/trips/new.html
+++ b/src/js/views/trips/new.html
@@ -1,6 +1,7 @@
 <div class="container">
-  <h1>Create a new trip for your fine self.</h1>
+  <!-- <h1>Create a new trip for your fine self.</h1> -->
   <form ng-submit="tripsNew.create()" name="tripsNew.newForm" class="form-group authForm" novalidate>
+    <h1>Create a new trip for your fine self.</h1>
     <div>
       <label for="trip_name">Name of your Trip</label>
       <input type="text" name="trip_name" ng-model="tripsNew.trip.trip_name" required class="form-control">
