--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -2,8 +2,8 @@
   <div class="col-xs-12">
     <div class="profileHeader">
       <h3>{{usersShow.user.full_name}}</h3>
-      <button ng-if="main.isAuthenticated() && main.currentUser.id === usersShow.user.id" ui-sref="usersEdit({ id: usersShow.user.id })">Edit</button>
-      <button ng-if="main.isAuthenticated() && main.currentUser.id === usersShow.user.id" ng-click="usersShow.delete()">Delete</button>
+      <button ng-if="main.isAuthenticated() && main.currentUser.id === usersShow.user.id" ui-sref="usersEdit({ id: usersShow.user.id })"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i></button>
+      <button ng-if="main.isAuthenticated() && main.currentUser.id === usersShow.user.id" ng-click="usersShow.delete()"><i class="fa fa-trash fa-lg" aria-hidden="true"></i></button>
     </div>
 
     <div class="profileImage">
@@ -11,11 +11,16 @@
     </div>
 
     <ul>
-      <li ng-repeat="trip in usersShow.user.trips">
-        <h4><strong>{{ trip.trip_name }}</strong></h4>
-        <p>From {{ trip.start_date | date }} to {{ trip.leave_date | date }}</p>
-        <button ui-sref="tripsShow({ id: trip.id })">Show</button>
-        <button ng-if="main.isAuthenticated() && main.currentUser.id === usersShow.user.id" ng-click="usersShow.deleteTrip(trip)">Delete</button>
+      <li ng-repeat="trip in usersShow.user.trips" class="card">
+        <h3><strong>{{ trip.trip_name }}</strong></h3>
+        <div class="cardBody">
+          <p>{{ trip.start_date | date }} to {{ trip.leave_date | date }}</p>
+        </div>
+
+        <div class="cardFooter">
+          <button ui-sref="tripsShow({ id: trip.id })">Show</button>
+          <button ng-if="main.isAuthenticated() && main.currentUser.id === usersShow.user.id" ng-click="usersShow.deleteTrip(trip)">Delete</button>
+        </div>
       </li>
     </ul>
 
