--- a/src/js/views/trips/show.html
+++ b/src/js/views/trips/show.html
@@ -21,36 +21,57 @@
 
       <form ng-submit="tripsShow.addStop()" class="form-group authForm" name="tripsShow.stopForm" novalidate>
         <h3>Add A Stop</h3>
+
         <div>
           <label for="place">Destination</label>
           <input name="place" id="place" autocomplete ng-model="tripsShow.city" lat="tripsShow.info.lat" lng="tripsShow.info.lng" place="tripsShow.info.place" country="tripsShow.info.country" class="form-control" required>
         </div>
+
         <div class="ng-message-error" ng-messages="tripsShow.stopForm.place.$error" ng-show="(tripsShow.stopForm.$submitted || tripsShow.stopForm.place.$touched)">
-          <p ng-message="required">Your Stop Destination is Required</p>
+          <p ng-message="required">Please provide your destination.</p>
         </div>
 
         <div>
-          <label for="start_date">Start Date</label>
-          <input type="date" id="start_date" name="start_date" min="{{ tripsShow.startDate }}" max="{{ tripsShow.leaveDate }}" ng-model="tripsShow.stop.start_date" class="form-control" required>
+          <label for="start_date">Arriving on</label>
+          <div class="input-group">
+            <input type="text" id="start_date" name="start_date" class="form-control" uib-datepicker-popup="{{ tripsShow.format }}" datepicker-options="tripsShow.dateOptions" ng-model="tripsShow.stop.start_date" is-open="tripsShow.stopStartDate.opened" required>
+            <span class="input-group-btn">
+               <button type="button" class="btn btn-default" ng-click="tripsShow.openStopStartDate()"><i class="glyphicon glyphicon-calendar"></i></button>
+            </span>
+          </div>
         </div>
+
         <div class="ng-message-error" ng-messages="tripsShow.stopForm.start_date.$error" ng-show="(tripsShow.stopForm.$submitted || tripsShow.stopForm.start_date.$touched)">
-          <p ng-message="required">Your Arrival Date is Required.</p>
+          <p ng-message="required">Please provide the <span ng-show="tripsShow.info.place">date of</span> arrival <span ng-hide="tripsShow.info.place">date</span><span ng-show="tripsShow.info.place">at {{ tripsShow.info.place }}</span></p>
         </div>
 
-        <div>
+        <!-- <div>
           <label for="leave_date">Leave Date</label>
           <input type="date" id="leave_date" name="leave_date" min="{{ tripsShow.startDate }}" max="{{ tripsShow.leaveDate }}" ng-model="tripsShow.stop.leave_date" class="form-control" required>
+        </div> -->
+
+        <div>
+          <label for="leave_date">Leaving on</label>
+          <div class="input-group">
+            <input type="text" id="leave_date" name="leave_date" class="form-control" uib-datepicker-popup="{{ tripsShow.format }}" datepicker-options="tripsShow.dateOptions" ng-model="tripsShow.stop.leave_date" is-open="tripsShow.stopLeaveDate.opened" required>
+            <span class="input-group-btn">
+               <button type="button" class="btn btn-default" ng-click="tripsShow.openStopLeaveDate()"><i class="glyphicon glyphicon-calendar"></i></button>
+            </span>
+          </div>
         </div>
+
         <div class="ng-message-error" ng-messages="tripsShow.stopForm.leave_date.$error" ng-show="(tripsShow.stopForm.$submitted || tripsShow.stopForm.leave_date.$touched)">
-          <p ng-message="required">Your Departure Date is Required.</p>
+          <p ng-message="required">Please provide the <span ng-show="tripsShow.info.place">date of</span> leaving <span ng-hide="tripsShow.info.place">date</span><span ng-show="tripsShow.info.place">from {{ tripsShow.info.place }}</span></p>
         </div>
+
         <div class="authButton">
           <button class="button">Add</button>
         </div>
+
       </form>
     </div>
   </div>
-  <div class="col-sm-6">
+  <!-- <div class="col-sm-6">
     <form ng-submit="tripsShow.getFlights()" class="form-group flightsForm">
       <h3>Wanna Fly There?</h3>
       <div>
@@ -111,5 +132,5 @@
         </li>
       </ul>
     </div>
-  </div>
+  </div> -->
 </div>
