--- a/src/js/views/trips/new.html
+++ b/src/js/views/trips/new.html
@@ -12,7 +12,7 @@
       <div class="input-group">
         <input type="text" id="start_date" name="start_date" class="form-control" uib-datepicker-popup="{{ tripsNew.format }}" datepicker-options="tripsNew.dateOptions" ng-model="tripsNew.trip.start_date" is-open="tripsNew.startDate.opened">
         <span class="input-group-btn">
-           <button type="button" class="btn btn-default" ng-click="tripsNew.openStartDate()"><i class="glyphicon glyphicon-calendar"></i></button>
+           <button type="button" class="btn btn-default" ng-click="tripsNew.openStartDate()"><i class="fa fa-calendar-plus-o fa-lg" aria-hidden="true"></i></button>
         </span>
       </div>
     </div>
@@ -24,7 +24,7 @@
       <div class="input-group">
         <input type="text" id="leave_date" name="leave_date" class="form-control" uib-datepicker-popup="{{ tripsNew.format }}" datepicker-options="tripsNew.dateOptions" ng-model="tripsNew.trip.leave_date" is-open="tripsNew.leaveDate.opened">
         <span class="input-group-btn">
-           <button type="button" class="btn btn-default" ng-click="tripsNew.openLeaveDate()"><i class="glyphicon glyphicon-calendar"></i></button>
+           <button type="button" class="btn btn-default" ng-click="tripsNew.openLeaveDate()"><i class="fa fa-calendar-plus-o fa-lg" aria-hidden="true"></i></button>
         </span>
       </div>
     </div>
